2004-04-18  TAKAHASHI Kaoru  <kaoru@kaisei.org>

	* mime-edit.el (mime-file-types): Add application/pdf. Use base64
	for application/postscript.
	(mime-content-types): Add application/pdf.

2004-04-04  Yoichi NAKAYAMA  <yoichi@geiin.org>

	* mime-edit.el (mime-file-types): Add application/vnd.ms-excel.
	(mime-content-types): Add application/vnd.ms-excel and
	application/msword.

2004-02-12  MORIOKA Tomohiko  <tomo@kanji.zinbun.kyoto-u.ac.jp>

	* mime-image.el (mime-display-image): Ignore errors about image
	decoding.

2004-02-06  Katsumi Yamaoka  <yamaoka@jpl.org>

	* mime-image.el (mime-image-normalize-xbm-buffer): Add missing
	format specifiers.

	* mime-view.el (mime-view-insert-entity-button): Fix misplaced let
	form.

2004-01-15  Katsumi Yamaoka  <yamaoka@jpl.org>

	* mime-edit.el (mime-edit-normalize-body): Fix a comment that the
	problem related to `replace-match' has been fixed at 2004-01-15,
	thanks to Handa-san.


2003-12-24  MORIOKA Tomohiko  <tomo@kanji.zinbun.kyoto-u.ac.jp>

	* SEMI: Version 1.14.6 (Maruoka) released.

2003-12-18  Daiki Ueno  <ueno@unixuser.org>

	* pgg-gpg.el (pgg-gpg-process-region): Set environment variable
	LANGUAGE as well.  GNU gettext gives precedence to LANGUAGE over
	LC_ALL, when different language code is specified.  Thanks to
	Tatsuya Kinoshita <tats@vega.ocn.ne.jp>.
	[cf. <emacs-mime-ja:1599>]

2003-12-17  Daiki Ueno  <ueno@unixuser.org>

	* pgg-gpg.el (pgg-gpg-messages-locale): New user option.
	(pgg-gpg-process-region): Set environment variable LC_ALL when
	pgg-gpg-messages-locale is specified.

	* pgg-def.el (pgg-messages-locale): New user option.

	* mime-pgp.el (mime-verify-application/pgp-signature): Copy
	messages from pgg-errors-buffer.
	(mime-add-application/pgp-keys): Ditto.

2003-12-16  Katsumi Yamaoka  <yamaoka@jpl.org>

	* mime-edit.el (mime-edit-normalize-body): Don't use the
	`(replace-match "\\1\r\n")' form since it may convert the unibyte
	string into multibyte in Emacs 21.4.
